created exclusive section

--- a/index.html
+++ b/index.html
@@ -218,6 +218,23 @@
             </div>
         </section>
     </div>
+    <section class="offer">
+        <div class="smallcontainer">
+            <div class="row">
+                <div class="col-2">
+                    <img src="./images/exclusive.png" alt="" />
+                </div>
+                <div class="col-2">
+                    <p>Exclusively Available on Redstore</p>
+                    <h1>Smart Band 4</h1>
+                    <small>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro laborum corrupti explicabo
+                        necessitatibus repudiandae ad voluptatem maiores dolor, velit delectus, at inventore animi
+                        similique deserunt aliquam repellat dolores vitae minima accusamus nulla! Iste, minima
+                        dolorum?</small>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
