--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
         <section class="categories">
             <div class="row">
                 <div class="col-3">
-                    <img src="./images/category-1.jpg" alt="">
+                    <img src="./images/category-1.jpg" />
                 </div>
                 <div class="col-3">
-                    <img src="./images/category-2.jpg" alt="">
+                    <img src="./images/category-2.jpg" />
                 </div>
                 <div class="col-3">
-                    <img src="./images/category-3.jpg" alt="">
+                    <img src="./images/category-3.jpg" />
                 </div>
             </div>
         </section>
@@ -222,15 +222,120 @@
         <div class="smallcontainer">
             <div class="row">
                 <div class="col-2">
-                    <img src="./images/exclusive.png" alt="" />
+                    <img src="./images/exclusive.png" class="offer-img" />
                 </div>
                 <div class="col-2">
                     <p>Exclusively Available on Redstore</p>
                     <h1>Smart Band 4</h1>
                     <small>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro laborum corrupti explicabo
                         necessitatibus repudiandae ad voluptatem maiores dolor, velit delectus, at inventore animi
-                        similique deserunt aliquam repellat dolores vitae minima accusamus nulla! Iste, minima
-                        dolorum?</small>
+                        <br></small>
+                    <a href="" class="btn">Buy Now &#8594;</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="testi">
+        <div class="smallcontainer">
+            <div class="row">
+                <div class="col-3">
+                    <i class="fa-solid fa-quote-left"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, tenetur? Odit quae ex
+                        aspernatur, sint hic officia laboriosam, maiores, fuga praesentium doloribus tenetur magni
+                        cupiditate.</p>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <img src="./images/user-1.png" />
+                    <h3>Sean Parker</h3>
+                </div>
+                <div class="col-3">
+                    <i class="fa-solid fa-quote-left"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, tenetur? Odit quae ex
+                        aspernatur, sint hic officia laboriosam, maiores, fuga praesentium doloribus tenetur magni
+                        cupiditate.</p>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <img src="./images/user-2.png" />
+                    <h3>Chaddalal Singh</h3>
+                </div>
+                <div class="col-3">
+                    <i class="fa-solid fa-quote-left"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, tenetur? Odit quae ex
+                        aspernatur, sint hic officia laboriosam, maiores, fuga praesentium doloribus tenetur magni
+                        cupiditate.</p>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <img src="./images/user-3.png" />
+                    <h3>Yuri Tarded</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="brands">
+        <div class="smallcontainer">
+            <div class="row">
+                <div class="col-5">
+                    <img src="./images/logo-godrej.png" />
+                </div>
+                <div class="col-5">
+                    <img src="./images/logo-oppo.png" />
+                </div>
+                <div class="col-5">
+                    <img src="./images/logo-coca-cola.png" />
+                </div>
+                <div class="col-5">
+                    <img src="./images/logo-paypal.png" />
+                </div>
+                <div class="col-5">
+                    <img src="./images/logo-philips.png" />
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col-1">
+                    <h3>Download Our App</h3>
+                    <p>Download our app for android and ios mobile phone</p>
+                </div>
+                <div class="footer-col-2">
+                    <img src="./images/logo-white.png" />
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero sequi velit nulla enim soluta,
+                        dolorem laborum cum nesciunt eaque dolorum.</p>
+                </div>
+                <div class="footer-col-3">
+                    <h3>Useful Links</h3>
+                    <ul>
+                        <li>Coupons</li>
+                        <li>Blog Post</li>
+                        <li>Return Policy</li>
+                        <li>Join Affiliate</li>
+                    </ul    >
+                </div>
+                <div class="footer-col-4">
+                    <h3>Follow Us</h3>
+                    <ul>
+                        <li>Facebook</li>
+                        <li>Twitter</li>
+                        <li>Instagram</li>
+                        <li>YouTube</li>
+                    </ul>
                 </div>
             </div>
         </div>
