--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 <body>
     <header>
         <div class="container">
-            <div class="navbar">
+            <div class="navbar" id="navbar">
                 <div class="logo">
                     <img src="./images/logo.png" alt="RedStore" width="125px">
                 </div>
                 <nav>
-                    <ul>
+                    <ul id="MenuItems">
                         <li><a href="">Home</a></li>
                         <li><a href="">Products</a></li>
                         <li><a href="">About</a></li>
@@ -31,9 +31,10 @@
                         <li><a href="">Account</a></li>
                     </ul>
                 </nav>
-                <img src="./images/cart.png" alt="Cart" width="30px" height="30px">
+                <img src="./images/cart.png" alt="Cart" width="30px" height="30px" />
+                <img src="./images/menu.png" alt="Menu" class="menu-icon" onclick="menuToggle()" />
             </div>
-            <div class="row">
+            <div class="row" id="row1">
                 <div class="col-2">
                     <h1>Give Your Workout <br> A New Style</h1>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos vero possimus ullam temporibus
@@ -313,6 +314,10 @@
                 <div class="footer-col-1">
                     <h3>Download Our App</h3>
                     <p>Download our app for android and ios mobile phone</p>
+                    <div class="app-logo">
+                        <img src="./images/play-store.png" />
+                        <img src="./images/app-store.png" />
+                    </div>
                 </div>
                 <div class="footer-col-2">
                     <img src="./images/logo-white.png" />
@@ -326,7 +331,7 @@
                         <li>Blog Post</li>
                         <li>Return Policy</li>
                         <li>Join Affiliate</li>
-                    </ul    >
+                    </ul>
                 </div>
                 <div class="footer-col-4">
                     <h3>Follow Us</h3>
@@ -338,8 +343,28 @@
                     </ul>
                 </div>
             </div>
+            <hr>
+            <p class="copyright">Copyright 2023 - Umar Ghayas</p>
         </div>
     </section>
+
+    <!-- -------- js for Menu --------- -->
+    <script>
+        var MenuItems = document.getElementById("MenuItems")
+        var navbottom = document.getElementById("navbar")
+        MenuItems.style.maxHeight = "0px";
+        function menuToggle(){
+            if(MenuItems.style.maxHeight == "0px"){
+                MenuItems.style.maxHeight = "200px";
+                navbottom.style.marginBottom= "200px";
+            }
+            else{
+                navbottom.style.marginBottom= "0px";
+                MenuItems.style.maxHeight = "0px";
+            }
+        }
+    </script>
+
 </body>
 
 </html>
